tests/fixtures/errors/e0409_match_on_signed.mimz
// expect: E0409
module M {
  in s: signed[4]
  in x: bit
  out y: bit
  y = match s {
    _ => x
  }
}
